Make a vsCode IDE implementation

--- a/.pylintrc
+++ b/.pylintrc
@@ -62,6 +62,7 @@ disable=
         global-statement,
         singleton-comparison,
         print-statement,
+        c-extension-no-member,
         parameter-unpacking,
         unpacking-in-except,
         old-raise-syntax,
@@ -167,7 +168,7 @@ disable=
 # either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once). See also the "--disable" option for examples.
-enable=c-extension-no-member
+enable=
 
 
 [REPORTS]
